--- a/diapos/SFB_Diseno.org
+++ b/diapos/SFB_Diseno.org
@@ -14,6 +14,20 @@
 * Caudal
 
 
+** Necesidades de caudal
+
+*** Valores de referencia
+ -  *OMS*: 50 litros diarios por habitante.
+
+ -  En *crisis humanitarias*, mínimo 3 litros diarios en climas templados y 5 litros en climas cálidos.
+
+ -  En *programas de cooperación*, 30 a 35 litros diarios por persona.
+
+ -  Para *sistemas fotovoltaicos*, se recomienda 25 litros diarios por habitante (fuentes comunitarias) o 45 litros (con grifo en cada domicilio).
+
+ -  *Contexto*: en grandes ciudades 250 litros diarios por habitante.
+
+
 ** Potencia hidráulica
 
 - La *potencia hidráulica*, $P_{H}$, necesaria para bombear agua es una función de,
@@ -24,48 +38,71 @@
 
 $$P_{H}=g\cdot\rho\cdot Q\cdot H_{v}$$
 
-- Cambiando las unidades ($P_{H}$ en watios, $H_{v}$ en metros y $Q$ en $\si{\meter\cubed\per\hour}$:
-$$P_{H}=2.725\cdot Q\cdot H_{V}$$
+- Cambiando las unidades ($P_{H}$ en watios, $H_{v}$ en metros y $Q$ en $\si{\meter\cubed\per\hour})$:
+#+BEGIN_EXPORT latex
+\[
+P_{H}=2.725\cdot Q\cdot H_{V}
+\]
+#+END_EXPORT
 
 ** Potencia eléctrica de la motobomba
 
-- La potencia de salida de la bomba necesita satisfacer $P_{H}$ más las *perdidas de fricción en la tubería*, $P_{f}$.  
+- La *potencia de salida de la bomba* incluye las *perdidas de fricción en la tubería*, $P_{mp} = P_{H} + P_{f}$.
 
-- El valor de $P_{H}+P_{f}$ es la *potencia mecánica a la salida de la bomba*. Este valor se asimila a una altura equivalente $H_{T}$ asociado a un caudal determinado:$$H_{T}=H_{v}+H_{f}$$
+- Se puede asimilar a una altura equivalente $H_{T} = H_{v}+H_{f}$:
 
-- La *potencia eléctrica a la entrada de la motobomba* es: $$P_{el}=\frac{P_{H}+P_{f}}{\eta_{mp}}$$ 
+#+BEGIN_EXPORT latex
+\[
+P_{mp}=2.725\cdot Q\cdot H_{T}
+\]
+#+END_EXPORT
+
+- Con la eficiencia de la motobomba obtenemos la *potencia eléctrica a la entrada de la motobomba*:
+#+BEGIN_EXPORT latex
+\[
+  P_{el}=\frac{P_{mp}}{\eta_{mp}} = \frac{2.725\cdot Q\cdot H_{T}}{\eta_{mp}}
+\]
+#+END_EXPORT
+
 
 ** Potencia eléctrica del generador
 
-La potencia eléctrica requerida por la motobomba es entregada por un generador FV y un acondicionador de potencia
+Esta potencia eléctrica requerida por la motobomba es entregada por un generador FV y un acondicionador de potencia
 
-$$P_{el}=P_{g}^{*}\cdot\frac{G}{G^{*}}\frac{\eta_{g}}{\eta_{g}^{*}}\cdot\eta_{inv}$$
+#+BEGIN_EXPORT latex
+\[
+  P_{el}=\frac{G}{G^{*}} \cdot P_{g}^{*} \cdot \frac{\eta_{g}}{\eta_{g}^{*}} \cdot \eta_{inv}
+\]
+#+END_EXPORT
 
 Por tanto,
 
-$$ \frac{2.725\cdot Q\cdot H_{V}}{\eta_{mp}} \simeq P_{g}^{*}\cdot\frac{G}{G^{*}}\cdot\frac{\eta_{g}}{\eta_{g}^{*}}\cdot\eta_{inv}$$ 
+#+BEGIN_EXPORT latex
+\[
+  \frac{2.725\cdot Q\cdot H_T}{\eta_{mp}} \simeq  \frac{G}{G^{*}} \cdot P_{g}^{*} \cdot \frac{\eta_{g}}{\eta_{g}^{*}}  \cdot \eta_{inv}
+  \]
+#+END_EXPORT
 
 
 
 ** Caudal diario
+#+BEGIN_EXPORT latex
+\[
+  \frac{2.725\cdot Q\cdot H_T}{\eta_{mp}} \simeq  \frac{G}{G^{*}} \cdot P_{g}^{*} \cdot \frac{\eta_{g}}{\eta_{g}^{*}}  \cdot \eta_{inv}
+  \]
+#+END_EXPORT
 
-- El *caudal diario* bombeado por este conjunto es: $$Q_{d}=\intop_{d}\frac{P_{g}^{*}\cdot\frac{G}{G^{*}}\frac{\eta_{g}}{\eta_{g}^{*}}\cdot\eta_{inv}\cdot\eta_{mp}}{2.725\cdot H_{T}}\mathrm{dt}$$
+- El *caudal diario* bombeado por este conjunto es: 
+#+BEGIN_EXPORT latex
+\[
+  Q_{d}=\intop_{d}\frac{\frac{G}{G^{*}} \cdot P_{g}^{*} \cdot \frac{\eta_{g}}{\eta_{g}^{*}}  \cdot \eta_{inv} \cdot \eta_{mp}}{2.725\cdot H_{T}}\mathrm{dt} 
+\]
+#+END_EXPORT
 
-- Debido a las variaciones de la temperatura ambiente y de la irradiancia, y también a causa del comportamiento dinámico de los pozos, *todos los parámetros mencionados anteriormente varían a lo largo del tiempo*. 
 
-- Integral no resoluble salvo por métodos numéricos (simulación)
+- *Todos los parámetros varían a lo largo del tiempo* (variaciones de la temperatura ambiente y de la irradiancia; comportamiento dinámico de los pozos)
 
-** Necesidades de caudal
-
--  *OMS*: 50 litros diarios por habitante.
-
--  En *crisis humanitarias*, mínimo 3 litros diarios en climas templados y 5 litros en climas cálidos.
-
--  En *programas de cooperación*, 30 a 35 litros diarios por persona.
-
--  Para *sistemas fotovoltaicos*, se recomienda 25 litros diarios por habitante (fuentes comunitarias) o 45 litros (con grifo en cada domicilio).
-
--  *Contexto*: en grandes ciudades 250 litros diarios por habitante.
+- Integral no resoluble salvo por métodos numéricos (simulación).
 
 * Altura
 
@@ -73,40 +110,51 @@ $$ \frac{2.725\cdot Q\cdot H_{V}}{\eta_{mp}} \simeq P_{g}^{*}\cdot\frac{G}{G^{*}
 
 $$Q_{d}=\intop_{d}\frac{P_{g}^{*}\cdot\frac{G}{G^{*}}\frac{\eta_{g}}{\eta_{g}^{*}}\cdot\eta_{inv}\cdot\eta_{mp}}{2.725\cdot H_{T}}\mathrm{dt}$$
 
-- *Altura total equivalente*, $H_{TE}$:
 
-$$Q_{d}=\frac{P_{g}^{*}}{2.725\cdot G^{*}\cdot H_{TE}}\cdot\intop_{dia}G\cdot\frac{\eta_{g}}{\eta_{g}^{*}}\cdot\eta_{inv}\cdot\eta_{mp}\mathrm{dt}$$
-
-- Ahora el cálculo sólo *depende de la radiación, temperatura, y equipos*.
-
-- Suposiciones:
+- Definimos una *altura total equivalente*, $H_{TE}$, con las siguientes suposiciones:
 
   - Las *pérdidas de fricción en tubería son despreciables* ($H_{f}<0.05\cdot H_{T}$).
 
   - El *nivel del agua dentro del pozo se mantiene constante*
 
+#+BEGIN_EXPORT latex
+\[
+Q_{d}=\frac{P_{g}^{*}}{2.725\cdot G^{*}\cdot H_{TE}}\cdot\intop_{dia}G\cdot\frac{\eta_{g}}{\eta_{g}^{*}}\cdot\eta_{inv}\cdot\eta_{mp}\mathrm{dt}
+\]
+#+END_EXPORT
+
+- Ahora el cálculo en la integral sólo *depende de la radiación, temperatura, y equipos*.
+
 
 ** Caracterización de pozos
 
-- Deseable realizar *ensayo de bombeo para caracterizar los pozos* con bomba portátil empleando el *caudal máximo del pozo*, $Q_{max}$.
 
-- Tres parámetros:
+- Supongamos que el pozo está caracterizado con tres parámetros:
 
   - *Nivel estático*, $H_{st}$
 
   - *Nivel dinámico*, $H_{dt}$
 
-  - *Caudal de ensayo*, $Q_{t}$ (habitualmente $Q_t = Q_{max}$)
+  - *Caudal de ensayo*, $Q_{t}$.
+
+- Deseable realizar *ensayo de bombeo para caracterizar los pozos* con bomba portátil empleando el *caudal máximo del pozo*, $Q_{max}$ (por tanto, supondremos $Q_t = Q_{max}$)
 
 ** Altura total equivalente
+Calculamos la *altura total equivalente* con:
 
 \[
-H_{TE}=H_{OT}+H_{ST}+(\frac{H_{DT}-H_{ST}}{Q_{T}})\cdot Q_{AP}+H_{f}(Q_{AP})
+\boxed{H_{TE}=H_{ot} + H_{st} + (\frac{H_{dt} - H_{st}}{Q_{T}}) \cdot Q_{AP} + H_{f}(Q_{AP})}
 \]
 
-- $Q_{AP}$, caudal aparente, $Q_{AP}=\alpha\cdot Q_{d}$, $\alpha= 1/24 = 0.0416\, h^{-1}$.
+  - $H_{OT}$,  altura desde la salida de agua hasta el suelo.
+    
+  - Nivel estático, $H_{st}$
+    
+  - Nivel dinámico, $H_{dt}$
+  
+  - Caudal aparente: $Q_{AP} = \alpha \cdot Q_{d}$ ($\alpha= 1/24 = 0.0416\, h^{-1}$).
 
-- $H_{OT}$,  altura desde la salida de agua hasta el suelo.
+  - $H_{f}(Q_{AP})$, pérdidas en la tubería al caudal aparente.
 
 * Potencia del generador
 ** Formula aproximada
@@ -119,25 +167,23 @@ $$Q_{d}=\frac{P_{g}^{*}}{2.725\cdot G^{*}\cdot H_{TE}}\cdot\intop_{dia}G\cdot\fr
   - $\eta_{inv}=0.9$
 *** Potencia del Generador
 \[
-P_{g}^{*}=\frac{10\cdot H_{TE}\cdot Q_{d}}{G_{d}/G^{*}}
+\boxed{P_{g}^{*}=\frac{10\cdot H_{TE}\cdot Q_{d}}{G_{d}/G^{*}}}
 \]
 
 ** 
 *** Ejemplo
-Para bombear $\SI{30}{\meter\cubed\per\Day}$ a $H_{TE}=\SI{40}{\meter}$ en un lugar de radiación diaria media $G_{d}=\SI{5}{\kilo\watt\hour\per\meter\squared\per\Day}$ se necesita un generador fotovoltaico de: 
-\[
-P_{g}^{*}=\frac{10\cdot40\cdot30}{5}=\SI{2400}{\wattpeak}
-\]
+Calcula la potencia de un generador FV para bombear un caudal diario de $\SI{30}{\meter\cubed\per\Day}$ a $H_{TE}=\SI{40}{\meter}$ en un lugar de radiación diaria media $G_{d}=\SI{5}{\kilo\watt\hour\per\meter\squared\per\Day}$.
+
 
 * Procedimiento de diseño
 
 ** Elección de la bomba
 
-- A partir del caudal diario requerido y la altura total equivalente, se calcula la potencia aproximada del generador FV.
+1. A partir del caudal diario requerido y la altura total equivalente, se calcula la potencia aproximada del generador FV.
 
-- Dividiendo el caudal diario requerido por la radiación diaria media, se obtiene un /caudal instantáneo medio/.
+2. Dividiendo el caudal diario requerido por la radiación diaria media, se obtiene un /caudal instantáneo medio/.
 
-- Con este caudal, se acude al catálogo del fabricante (por ejemplo, la nomenclatura de Grundfos para las bombas sumergibles es SP-XX-YY, siendo XX el caudal instantáneo nominal de la bomba) y se elige un grupo de bombas en el entorno.
+3. Con este caudal, se acude al catálogo del fabricante (/por ejemplo, la nomenclatura de Grundfos para las bombas sumergibles es SP-XX-YY, siendo XX el caudal instantáneo nominal de la bomba/) y se elige un grupo de bombas en el entorno.
 
 ** Curvas HQ 
 
@@ -152,11 +198,13 @@ P_{g}^{*}=\frac{10\cdot40\cdot30}{5}=\SI{2400}{\wattpeak}
     :PROPERTIES:
     :BEAMER_col: 0.5
     :END:
-- Los catálogos recogen información del funcionamiento instantáneo a frecuencia nominal.
-- Las curvas H-Q no son de uso inmediato para el dimensionado de un SFB.
+- Los catálogos recogen información del *funcionamiento instantáneo a frecuencia nominal*.
+- Las curvas H-Q *no* son de uso inmediato para el dimensionado de un SFB.
 
 
 ** Curvas HQ a frecuencia variable
+- Para aproximar el funcionamiento en frecuencia variable, es recomendable *multiplicar el valor de $H_{TE}$ por un factor de $1.4$*.
+
 - Leyes de la semejanza (rendimiento constante)
 
 #+BEGIN_EXPORT latex
@@ -168,7 +216,7 @@ P_{mec} &\propto n^{3} &T &\propto n^{2}
 
 [[file:~/github/esf/figs/CurvaHQ.png]]
 
-- Para aproximar el funcionamiento en frecuencia variable, es recomendable *multiplicar el valor de $H_{TE}$ por un factor de $1.4$*.
+
 
 ** Simulación 
 - Es recomendable simular el funcionamiento del sistema para afinar el dimensionado.
@@ -179,13 +227,19 @@ P_{mec} &\propto n^{3} &T &\propto n^{2}
 
 - La *tensión de entrada al variador* debe ser:$$V_{DC}=\frac{\sqrt{2}V_{AC}}{1.1}$$
 
-- Para una bomba de tensión de $230\, V_{ac}$ se necesita una tensión en la entrada que no sea inferior a $\simeq300\, V_{dc}$.
+- Ejemplo: para una bomba de tensión de $230\, V_{ac}$ se necesita una tensión en la entrada que no sea inferior a $\simeq300\, V_{dc}$.
 
 - A partir de esta tensión se configura el *número de módulos por serie* y el *número de ramas* del generador.
 
 ** Pozo, Depósito y Tubería
-- Como seguridad, cuando la potencia entregada por el generador es igual al 80% de su potencia nominal, el caudal bombeado correspondiente no debe exceder el máximo admisible por el pozo.
-- El *tamaño del depósito* será el suficiente para *1 o 2 días de consumo*.
-- A partir del caudal $Q_{AP}$ y de la longitud de tubería necesaria, se elige el *diámetro* de la misma (en curvas del fabricante) de forma que las pérdidas sean inferiores a un porcentaje prefijado de $H_{te}$.
+
+*** Caudal máximo del pozo
+Como seguridad, se debe comprobar que cuando la potencia entregada por el generador es igual al 80% de su potencia nominal, el caudal bombeado correspondiente no excede el máximo admisible por el pozo.
+
+*** Tamaño del depósito
+El suficiente para *1 o 2 días de consumo*
+
+*** Tubería
+A partir del caudal $Q_{AP}$ y de la longitud de tubería necesaria, se elige el *diámetro* de la misma (en curvas del fabricante) de forma que las pérdidas sean inferiores a un porcentaje prefijado de $H_{TE}$.
 
 
