--- a/diapos/SolarRadiation_Generator.org
+++ b/diapos/SolarRadiation_Generator.org
@@ -7,7 +7,7 @@
 * Motivation
 ** Inclination Angle
 - PV generators have an *inclination angle higher than zero* to maximize the performance.
-- The generator inclination angle depends on the latitude of the location and on the application[fn:1].
+- The generator *inclination angle* depends on the *latitude* of the location and on the *application*[fn:1].
 
 #+ATTR_LATEX: :height 0.5\textheight
 [[../figs/PVUrban.png]]
@@ -30,7 +30,7 @@
 *** Declination Angle, $\delta$
 - Angle between the equatorial plane, and the line from the Sun to the center of the Earth.
 \[
-\delta=23.45\degree\cdot\sin(\frac{2\pi\cdot(d_{n}+284)}{365})
+\boxed{\delta=23.45\degree\cdot\sin(\frac{2\pi\cdot(d_{n}+284)}{365})}
 \]
 
 ** Declination Angle and Seasons
@@ -41,19 +41,24 @@
 [[../figs/Declinacion.pdf]]
 
 ** Solar Hour Angle
-- $w$, difference between the current instant and the noon or midday ($w = 0$).
-  - (Hours) $-12, -11, -10, \dots, -1, \textbf{0}, 1, \dots, 10, 11, 12$
-  - 1h = 15º ($24\text{h} = 2\pi \text{ radians} = 360$).
+- $\omega$: difference between the current instant and the noon or midday ($\omega = 0$).
 
-- Sunrise ($w_s < 0$): 
-#+BEGIN_EXPORT latex
-\[
-\cos(\omega_{s}) = -\tan(\delta)\tan(\phi)
-\]
+- $\omega < 0$ before midday
+- 1h = 15º ($24\text{h} = 2\pi \text{ radians} = 360^\circ$).
+- $\boxed{\omega = -12, -11, -10, \dots, -1, \textbf{0}, 1, \dots, 10, 11, 12}$ (hours)
 
-#+END_EXPORT
+*** Sunrise ($\omega_s$)
+ #+BEGIN_EXPORT latex
+ \[
+ \cos(\omega_{s}) = -\tan(\delta)\tan(\phi)
+ \]
+ #+END_EXPORT
+ - $\omega_s < 0$
+ - Day length, $|2 \cdot \omega_s|$, depends on the *latitude*, $\phi$, and on the *day of year*.
 
-- Day length, $|2 \cdot \omega_s|$, depends on the *latitude*, $\phi$, and on the *day of year*.
+** Day length
+
+[[../figs/DuracionDia.pdf]]
 
 ** Zenith Angle
    :PROPERTIES:
@@ -61,19 +66,19 @@
    :END:
 
 \[
-\cos(\theta_{z}) = \cos(\delta) \cos(\omega) \cos(\phi) + \sin(\delta) \sin(\phi)
+\boxed{\cos(\theta_{z}) = \cos(\delta) \cos(\omega) \cos(\phi) + \sin(\delta) \sin(\phi)}
 \]
 
 
 ***                                                                   :BMCOL:
     :PROPERTIES:
-    :BEAMER_col: 0.55
+    :BEAMER_col: 0.6
     :END:
 - $\theta_z$, angle between the Sun and the zenith (vertical in a particular location).
 - Depends on $d_n$, $\omega$, and $\phi$.
 ***                                                                   :BMCOL:
     :PROPERTIES:
-    :BEAMER_col: 0.8
+    :BEAMER_col: 0.7
     :END:
 [[../figs/SistemaCoordenadasLocal-crop.pdf]]
 
@@ -82,19 +87,19 @@
    :BEAMER_opt: plain
    :END:
 \[
-  \cos(\psi_{s}) = \mathrm{sign}(\phi) \cdot \frac{\cos(\delta) \cos(\omega) \sin(\phi) - \cos(\phi) \sin(\delta)} {\sin(\theta_{z})}
+  \boxed{\cos(\psi_{s}) = \mathrm{sign}(\phi) \cdot \frac{\cos(\delta) \cos(\omega) \sin(\phi) - \cos(\phi) \sin(\delta)} {\sin(\theta_{z})}}
 \]
 
 ***                                                                   :BMCOL:
     :PROPERTIES:
-    :BEAMER_col: 0.55
+    :BEAMER_col: 0.6
     :END:
 - $\psi_s$, angle between the projection of Sun onto the horizontal plane and the noon.
 - Depends on $d_n$, $\omega$, and $\phi$.
 
 ***                                                                   :BMCOL:
     :PROPERTIES:
-    :BEAMER_col: 0.75
+    :BEAMER_col: 0.7
     :END:
 [[../figs/SistemaCoordenadasLocal-crop.pdf]]
 
@@ -105,16 +110,18 @@
 
 ** Extraterrestrial Irradiation
 
-- Solar radiation incident on a horizontal plane at top of the atmosphere.
-- Depends on the latitude and day of the year.
+- Solar radiation incident on a horizontal plane *at the top of the atmosphere* (TOA).
+- Depends on the *latitude* and *day of the year*.
 
 #+ATTR_LATEX: :height 0.5\textheight
 [[../figs/SolarRadiationComponents_NREL.png]]
 
 
 ** Extraterrestrial Irradiation
-- $B_{0d}(0)=-\frac{24}{\pi}B_{0}\epsilon_{0}\cdot(\omega_{s}\sin\phi\sin\delta+\cos\delta\cos\phi\sin\omega_{s})$
-  - $\omega_{s}$ in radians
+ \[
+\boxed{B_{0d}(0)=-\frac{24}{\pi}B_{0}\epsilon_{0}\cdot(\omega_{s}\sin\phi\sin\delta+\cos\delta\cos\phi\sin\omega_{s})}
+\]
+  - $\omega_{s}$ in radians (remember, $\omega_s < 0$)
   - $B_0 \simeq \SI{1367}{\watt\per\meter\squared}$ (Solar Constant) 
   - Eccentricity correction factor, $\epsilon_0 = 1+0,033\cdot\cos(2\pi d_n/365)$
 
@@ -136,8 +143,8 @@
 - If $\alpha=0$
 #+BEGIN_EXPORT latex
 \[
-\cos(\theta_{s}) = \cos(\delta)\cos(\omega)\cos(\beta-|\phi|)- \mathrm{sign}(\phi)\cdot\sin(\delta)\sin(\beta-|\phi|)
-\]
+\boxed{\cos(\theta_{s}) = \cos(\delta)\cos(\omega)\cos(\beta-|\phi|)- \mathrm{sign}(\phi)\cdot\sin(\delta)\sin(\beta-|\phi|)
+}\]
 #+END_EXPORT
 
 #+ATTR_LATEX: :height 0.6\textheight
@@ -187,10 +194,10 @@
 
 * Transposition Procedure
 
-** Transposition Procedure
+** Diffuse and Beam Components
 
 
-[[../figs/ProcedimientoCalculoRadiacionInclinada.pdf]]
+[[../figs/ProcedimientoCalculoRadiacionInclinada_componentes.pdf]]
 
 
 ** Extract Diffuse and Beam Components
@@ -231,6 +238,9 @@ Let's $G_{d,m}(0) = \SI{3150}{\watthour\per\meter\squared}$ in a month with $B_{
 - $B_{d,m}(0)=3150-551.6=\SI{2598,4}{\watthour\per\meter\squared}$
 
 ** Intradaily profile 
+[[../figs/ProcedimientoCalculoRadiacionInclinada_perfil.pdf]]
+
+** Intradaily profile 
 
 *** Estimate irradiance from irradiation
 #+BEGIN_EXPORT latex
@@ -249,8 +259,12 @@ Let's $G_{d,m}(0) = \SI{3150}{\watthour\per\meter\squared}$ in a month with $B_{
   b &=0.6609+0.4767\cdot\sin(\omega_{s}+\frac{\pi}{3})
 \end{align*}
 #+END_EXPORT
+
 ** Transposition to the Plane of Generator
 
+[[../figs/ProcedimientoCalculoRadiacionInclinada_inclinada.pdf]]
+
+** Transposition to the Plane of Generator
 - Beam radiation
 
 \[B(\alpha,\beta)=B(0)\cdot\frac{\max(0,\cos(\theta_{s}))}{\cos(\theta_{zs})}\]
