Pequeñas mejoras en assignments

--- a/diapos/SRG_Assignment.tex
+++ b/diapos/SRG_Assignment.tex
@@ -1,4 +1,4 @@
-% Created 2018-04-17 mar 13:29
+% Created 2019-02-14 jue 16:29
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -27,17 +27,17 @@
  pdftitle={Session \#2 Assignment},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 25.2.2 (Org mode 9.1.9)}, 
+ pdfcreator={Emacs 26.1 (Org mode 9.2)}, 
  pdflang={English}}
 \begin{document}
 
 \maketitle
-In this assignment you are going to estimate the global irradiation incident on a PV generator mounted on a south-oriented fixed structure with an inclination near to the optimum value. You should use the location and the global radiation values of the step \#7 (or step \#4) of previous assignment.
+In this assignment you are going to estimate the global irradiation incident on a PV generator mounted on a south-oriented fixed structure with an inclination near to the optimum value. You should use the location and the global radiation values of the step \#8 (or step \#5) of previous assignment.
 
 \begin{enumerate}
 \item Compute the declination, \(\delta\), day length, \(w_s\), and daily extraterrestrial irradiation on the horizontal plane, \(B_{0d}(0)\) for the ``average monthly days'' (see table below).
 
-\item Compute the clearness index, \(K_{Tm}\), and fraction of diffuse, \(F_{Dm}\), with the 12 monthly averages of global irradiation on the horizontal plane (step \#7 or \#4 of previous assignment). Compute the beam and diffuse components of solar radiation on the horizontal plane.
+\item Compute the clearness index, \(K_{Tm}\), and fraction of diffuse, \(F_{Dm}\), with the 12 monthly averages of global irradiation on the horizontal plane (step \#8 or \#5 of previous assignment). Compute the beam and diffuse components of solar radiation on the horizontal plane.
 
 \item Compute the cosine of the zenith angle, \(\cos(\theta_{zs})\), and the cosine of the angle of incidence, \(\cos(\theta_s)\) \textbf{for each day (month) of the table}. You should obtain 24 values per day (a value for each hour in a day).
 
