--- a/diapos/SRH_Assignment.tex
+++ b/diapos/SRH_Assignment.tex
@@ -1,4 +1,4 @@
-% Created 2018-04-30 lun 10:54
+% Created 2019-02-14 jue 16:27
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -26,21 +26,24 @@
  pdftitle={Session \#1 Assignment},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 25.2.2 (Org mode 9.1.9)}, 
+ pdfcreator={Emacs 26.1 (Org mode 9.2)}, 
  pdflang={English}}
 \begin{document}
 
 \maketitle
 \begin{enumerate}
-\item Retrieve daily measurements from three nearby meteorological stations (time series length 10 years).
+\item Retrieve \textbf{daily} measurements from three nearby meteorological stations (time series length 10 years).
 \item \emph{(Session \#2) Filter each time series using physical limits}.
-\item Compute a daily time series representative of the region with the average of the three time series. Compare this time series with each station using statistical metrics (MBD, RMSD, MAD).
-\item Choose a location inside the perimeter defined by the three stations, and estimate the daily solar radiation using spatial interpolation (IDW).
-\item Retrieve monthly averages of solar radiation from a satellite service (preferably CMSAF, with QGis or similar software) for a region covering the three stations.
-\item Compare the satellite values at the three locations with the monthly averages of the measurements provided by the stations, using statistical metrics.
-\item Combine the satellite estimations at the location defined in step 4 with the monthly averages of the result of that step. Thus, if we denote the monthly averages of daily values of step \#4 with \(G_{dm,IDW}\) and the satellite estimates with \(G_{dm,sat}\), the result of step \#7 is (for each month):
+\item Compute a \textbf{daily} time series representative of the region with the average of the three time series.
+\item Compare this average time series with each station using statistical metrics (MBD, RMSD, MAD).
+\item Choose a location inside the perimeter defined by the three stations, and estimate the \textbf{monthly averages} of daily solar radiation using spatial interpolation (IDW).
+
+\noindent\rule{\textwidth}{0.5pt}
+\item \emph{Retrieve \textbf{monthly averages} of solar radiation from a satellite service (preferably CMSAF, with QGis or similar software) for a region covering the three stations.}
+\item \emph{Compare the satellite values at the three locations with the monthly averages of the measurements provided by the stations, using statistical metrics.}
+\item \emph{Combine the satellite estimations at the location defined in step \#5 with the \textbf{monthly averages} of the result of that step. Thus, if we denote the monthly averages of daily values of step \#4 with \(G_{dm,IDW}\) and the satellite estimates with \(G_{dm,sat}\), the result of step \#7 is (for each month)}:
 \end{enumerate}
 \[G_{dm} = 1/2 \cdot (G_{dm,IDW} + G_{dm,sat})\]
 
-\textbf{The result of the last step will be used in Session \#2}.
+\textbf{The result of step \#8 (or \#5) will be used in Session \#2}.
 \end{document}
