--- a/diapos/config.org
+++ b/diapos/config.org
@@ -1,6 +1,7 @@
-#+AUTHOR:    Oscar Perpiñán Lamigueiro
+#+AUTHOR:    [[https://oscarperpinan.github.io][Oscar Perpiñán Lamigueiro]]
 #+EMAIL:     oscar.perpinan@upm.es
-#+DATE: http://oscarperpinan.github.io
+#+DATE:
+#+BEAMER_HEADER:\institute[UPM]{Universidad Politécnica de Madrid}
 #+STARTUP: beamer
 #+DESCRIPTION:
 #+KEYWORDS:
@@ -13,25 +14,43 @@
 #+LINK_UP:   
 #+LINK_HOME: 
 #+XSLT:
+#+LaTeX_CLASS: beamer
 #+LATEX_CLASS_OPTIONS: [xcolor={usenames,svgnames,dvipsnames}]
-#+BEAMER_THEME: Goettingen [hideothersubsections]
-#+BEAMER_COLOR_THEME: rose
+#+BEAMER_THEME: Boadilla
 #+BEAMER_FONT_THEME: serif
+#+BEAMER_COLOR_THEME: rose
+#+LATEX_HEADER: \usepackage[spanish]{babel}
+#+LATEX_HEADER: \setbeamercolor{alerted text}{fg=blue!50!black}
+#+LATEX_HEADER: \setbeamerfont{alerted text}{series=\bfseries}
+#+LATEX_HEADER: \setbeamerfont{block title}{series=\bfseries}
+#+LATEX_HEADER: \setbeamercolor{block title}{bg=structure.fg!20!bg!50!bg}
+#+LATEX_HEADER: \setbeamercolor{block body}{use=block title,bg=block title.bg}
+#+LATEX_HEADER: \setbeamertemplate{navigation symbols}{\insertsectionnavigationsymbol}
+#+LATEX_HEADER: \lstset{keywordstyle=\color{blue}, commentstyle=\color{gray!90}, basicstyle=\ttfamily\small, columns=fullflexible, breaklines=true,linewidth=\textwidth, backgroundcolor=\color{gray!23}, basewidth={0.5em,0.4em}, literate={¡}{{\textexclamdown}}1 {á}{{\'a}}1 {ñ}{{\~n}}1 {é}{{\'e}}1 {ó}{{\'o}}1 {í}{{\'i}}1 {ú}{{\'u}}1 {º}{{\textordmasculine}}1, showstringspaces=false}
 #+LATEX_HEADER: \usepackage{mathpazo}
-#+LATEX_HEADER_EXTRA: \setbeamercolor{alerted text}{fg=blue!50!black} \setbeamerfont{alerted text}{series=\bfseries}
-#+LATEX_HEADER: \usepackage{gensymb}
-#+LATEX_HEADER: \usepackage{amsmath}
-#+LATEX_HEADER: \usepackage{chemarr}%flechas para reacciones químicas (SFER.tex)
-#+LATEX_HEADER: \bibliographystyle{plain}
 #+LATEX_HEADER: \AtBeginSubsection[]{\begin{frame}[plain]\tableofcontents[currentsubsection,sectionstyle=show/shaded,subsectionstyle=show/shaded/hide]\end{frame}}
 #+LATEX_HEADER: \AtBeginSection[]{\begin{frame}[plain]\tableofcontents[currentsection,hideallsubsections]\end{frame}}
 #+LATEX_HEADER: \usepackage[emulate=units]{siunitx}
-#+LATEX_HEADER: \sisetup{fraction=nice, decimalsymbol=comma, retain-unity-mantissa = false}
 #+LATEX_HEADER: \newunit{\wattpeak}{Wp}
 #+LATEX_HEADER: \newunit{\watthour}{Wh}
 #+LATEX_HEADER: \newunit{\amperehour}{Ah}
+#+LATEX_HEADER: \sisetup{fraction=nice, decimalsymbol=comma, retain-unity-mantissa = false}
 #+LATEX_HEADER: \usepackage{steinmetz}
+#+LATEX_HEADER: \hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
+#+LATEX_HEADER: \usepackage{fancyvrb}
+#+LATEX_HEADER: \DefineVerbatimEnvironment{verbatim}{Verbatim}{fontsize=\tiny, formatcom = {\color{black!70}}}
+#+LATEX_HEADER: \usepackage{gensymb}
+#+LATEX_HEADER: \usepackage{amsmath}
+#+LATEX_HEADER: \usepackage{chemarr}%flechas para reacciones químicas (SFER.tex)
 #+LATEX_HEADER: \hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
 #+LATEX_HEADER: \renewcommand{\thefootnote}{\fnsymbol{footnote}}
 #+LATEX_HEADER: \beamertemplatenavigationsymbolsempty
 #+LATEX_HEADER: \setbeamertemplate{footline}[frame number]
+#+LATEX_HEADER: \bibliographystyle{plain}
+#+PROPERTY: header-args :tangle yes :comments org
+
+
+
+
+
+
